--- a/coolpics/coolpics.css
+++ b/coolpics/coolpics.css
@@ -63,7 +63,7 @@ footer {
     background-color: var(--primary-color);
     color: var(--text-light);
     padding: 1rem;
-    position: fixed;
+    position: static;
     bottom: 0;
     width: 100%;
 }
